fixed hamburger menu on mobile and browser rendering issues for mobile

--- a/styles/ContactForm.module.scss
+++ b/styles/ContactForm.module.scss
@@ -23,6 +23,7 @@
         border: none;
         background-color: var(--lightest-aqua);
         box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+        padding: 1em;
 
     }
 
@@ -33,6 +34,7 @@
         background-color: var(--lightest-aqua);
         resize: none;
         box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
+        padding: 1em;
 
     }
 
@@ -45,7 +47,7 @@
         height: 100%;
         margin-top: 25px;
         border-radius: 10px;
-
+        height: 60px;
 
         
 
