--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -13,7 +13,7 @@
     overflow: hidden;
 
     // * {
-    //     border: 1px solid black;
+        // border: 1px solid black;
     // }
     
     
@@ -21,8 +21,9 @@
 .heroContainer {
     display: flex;
     width: 100vw;
+    // height: 100vh;
     height: calc(100vh - 80px);
-    max-height: calc(100vh - 80px);
+    // max-height: calc(100vh - 80px);
     // overflow: hidden;
 
 
@@ -55,7 +56,7 @@
     
     .launchBtn {
         position: absolute;
-        bottom: 3%;
+        bottom: 2.5vh;
         // justify-self: flex-end;
         // align-self: center;
     }
@@ -65,7 +66,7 @@
 .waveSvg {
     z-index: -3;
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     // border: 1px solid black;
 
 }
@@ -137,6 +138,9 @@
         height: 100vh;
         width: 100vw;
         border-top: 1px solid transparent; //fixes whitespace bug
+        // border: 1px solid black;
+        display: flex;
+        flex-direction: column;
     }
 
     h1 {
@@ -153,15 +157,17 @@
         // border: 1px solid orange;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        height: calc(100vh - 30.5vh);
+        justify-content: space-around;
+        // height: calc(100vh - 30.5vh);
+        // height: 80%;
         align-items: center;
         list-style: none;
         margin: 0;
         padding: 0;
         color: var(--lightest-aqua);
         font-size: 4vh;
-        // margin-bottom: 5%;
+        margin-bottom: 5%;
+        flex: 1 1 100%;
 
         li {
             margin: 0;
@@ -192,7 +198,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        border: 1px solid black;
+        // border: 1px solid black;
 
         h1 {
             color: var(--primary-color);
@@ -256,3 +262,5 @@
     }
     
 }
+
+
