--- a/styles/IndexNav.module.scss
+++ b/styles/IndexNav.module.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Sulphur+Point&display=swap');
 
+.fixed {
+    position: fixed;
+}
+
 .navbar {
     z-index: 999;
     background:#FAFAFA;
@@ -7,20 +11,27 @@
     height: 80px;
     width: 100%;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
-
+    // position: fixed;
 
     .container {
         // display: flex;
         position: relative;
         z-index: 999;
+        // position: fixed;
 
     }
+
 
     .navItems {
         background: linear-gradient(90.46deg, #52E9C5 2.3%, #CFFCF1 99.6%);
-        height: calc(100vh - 80px);
+        // height: calc(100vh - 80px);
+        height: 100vh;
         display: grid;
+        position: fixed;
+        width: 100%;
+        // overflow: hidden;
     }
+
 
 
     h1 {
@@ -69,7 +80,7 @@
 
     .launchBtnWrap {
         margin-bottom: 5%;
-        width: 90%;
+        width: auto;
         justify-self: center;
         align-self: end;
     }
@@ -94,6 +105,8 @@
     .navbar {
         // background: orange;
         height: 100px;
+        position: unset;
+
 
         .container {
             display: grid;
@@ -149,6 +162,7 @@
             display: block;
             // border: 1px solid yellow;
             height: 100px;
+            position: unset;
         }
         .navList {
             display: flex;
