--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,14 @@
   --lightest-aqua: #CFFCF1;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  list-style: none;
+}
+
 html,
 body {
   padding: 0;
